--- a/index.html
+++ b/index.html
@@ -572,60 +572,60 @@
                 <div class="feedback-track" id="feedbackTrack">
                     <!-- Original Images -->
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/v4tgJmsJ/premimun-fb.jpg" alt="Premium Feedback" loading="lazy">
+                        <img src="https://i.ibb.co/LzShctwp/aisha-ff-1.jpg" alt="Student Success 1" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/whsvg0mS/Whats-App-Image-2025-11-02-at-12-10-25-PM-4.jpg" alt="Student Success Story" loading="lazy">
+                        <img src="https://i.ibb.co/7NTT55yL/Aisha-ff-2.jpg" alt="Student Success 2" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/pvJyXSCP/Whats-App-Image-2025-11-02-at-12-10-25-PM-1.jpg" alt="Community Member" loading="lazy">
+                        <img src="https://i.ibb.co/KcBKD88H/Aisha-ff-3.jpg" alt="Student Success 3" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/C3qZLyvK/Whats-App-Image-2025-11-02-at-12-10-24-PM-1.jpg" alt="Achievement Story" loading="lazy">
+                        <img src="https://i.ibb.co/SwvqJh05/Aisha-ff-4.jpg" alt="Student Success 4" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/yncxCxHB/Whats-App-Image-2025-11-02-at-12-10-24-PM.jpg" alt="Earning Proof" loading="lazy">
+                        <img src="https://i.ibb.co/ymzt28qt/Aisha-ff-5.jpg" alt="Student Success 5" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/DDTx5G26/Whats-App-Image-2025-11-02-at-12-10-25-PM-2.jpg" alt="Happy Student" loading="lazy">
+                        <img src="https://i.ibb.co/0j4MZN6c/Aisha-Ff-6.jpg" alt="Student Success 6" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/SzbQF2C/Whats-App-Image-2025-11-02-at-12-10-25-PM-3.jpg" alt="Success Journey" loading="lazy">
+                        <img src="https://i.ibb.co/rRg4XvH4/Aisha-ff-7.jpg" alt="Student Success 7" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/NgjW7mSt/Whats-App-Image-2025-11-02-at-12-10-25-PM.jpg" alt="Transformation Story" loading="lazy">
+                        <img src="https://i.ibb.co/LzShctwp/aisha-ff-1.jpg" alt="Student Success 1" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/xKBmMgV7/Whats-App-Image-2025-11-02-at-12-12-54-PM.jpg" alt="Financial Freedom" loading="lazy">
+                        <img src="https://i.ibb.co/7NTT55yL/Aisha-ff-2.jpg" alt="Student Success 2" loading="lazy">
                     </div>
                     
                     <!-- Duplicated Images for Seamless Loop -->
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/v4tgJmsJ/premimun-fb.jpg" alt="Premium Feedback" loading="lazy">
+                        <img src="https://i.ibb.co/LzShctwp/aisha-ff-1.jpg" alt="Student Success 1" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/whsvg0mS/Whats-App-Image-2025-11-02-at-12-10-25-PM-4.jpg" alt="Student Success Story" loading="lazy">
+                        <img src="https://i.ibb.co/7NTT55yL/Aisha-ff-2.jpg" alt="Student Success 2" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/pvJyXSCP/Whats-App-Image-2025-11-02-at-12-10-25-PM-1.jpg" alt="Community Member" loading="lazy">
+                        <img src="https://i.ibb.co/KcBKD88H/Aisha-ff-3.jpg" alt="Student Success 3" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/C3qZLyvK/Whats-App-Image-2025-11-02-at-12-10-24-PM-1.jpg" alt="Achievement Story" loading="lazy">
+                        <img src="https://i.ibb.co/SwvqJh05/Aisha-ff-4.jpg" alt="Student Success 4" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/yncxCxHB/Whats-App-Image-2025-11-02-at-12-10-24-PM.jpg" alt="Earning Proof" loading="lazy">
+                        <img src="https://i.ibb.co/ymzt28qt/Aisha-ff-5.jpg" alt="Student Success 5" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/DDTx5G26/Whats-App-Image-2025-11-02-at-12-10-25-PM-2.jpg" alt="Happy Student" loading="lazy">
+                        <img src="https://i.ibb.co/0j4MZN6c/Aisha-Ff-6.jpg" alt="Student Success 6" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/SzbQF2C/Whats-App-Image-2025-11-02-at-12-10-25-PM-3.jpg" alt="Success Journey" loading="lazy">
+                        <img src="https://i.ibb.co/rRg4XvH4/Aisha-ff-7.jpg" alt="Student Success 7" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/NgjW7mSt/Whats-App-Image-2025-11-02-at-12-10-25-PM.jpg" alt="Transformation Story" loading="lazy">
+                        <img src="https://i.ibb.co/LzShctwp/aisha-ff-1.jpg" alt="Student Success 1" loading="lazy">
                     </div>
                     <div class="feedback-item">
-                        <img src="https://i.ibb.co/xKBmMgV7/Whats-App-Image-2025-11-02-at-12-12-54-PM.jpg" alt="Financial Freedom" loading="lazy">
+                        <img src="https://i.ibb.co/7NTT55yL/Aisha-ff-2.jpg" alt="Student Success 2" loading="lazy">
                     </div>
                 </div>
             </div>
